--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,15 @@
     </scm>
     <build>
         <plugins>
+                       <plugin>
+        <groupId>org.openclover</groupId>
+        <artifactId>clover-maven-plugin</artifactId>
+        <configuration>
+            <generateHtml>true</generateHtml>
+            <generateXml>true</generateXml>
+        </configuration>
+      </plugin>
+            
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
